# rotors_simulator

./: .gitignore  .tags  CONTRIBUTING.md  CoreOS  Dios mio 3.0  JarvisgazeboGUI.universalOS  LICENSE  README.md  SHA1024  SetupInstructions  TRAIL_README.md  Thetealveneno.iot.legacy.md  ToDo  ant-designs?organization=oscarg933&organization=oscarg933  ant-designsOrchastrator?organization=oscarg933&organization=oscarg933  dependencies.rosinstall  http-eportaloutlook.com.git  rotors_demos.rosinstall  rotors_hil.rosinstall  rotors_minimal.rosinstall  rotors_px4.rosinstall  setup_instructions.md  test  visualize_custom_wind_field.py
Geranos/: CMakeLists.txt  package.xml
Geranos/launch/: geranos.launch  hcrane.launch  hcrane.xml
Geranos/resouce/: hcrane.yaml  lee_position_controller.yaml
Geranos/urdf/: generic_odometry_sensor.gazebo  generic_odometry_sensor.xml
Geranos/world/: example_world.world  geranos.launch
euroc_simulation_server/: CMakeLists.txt  package.xml
euroc_simulation_server/launch/: t1_1.launch  t1_2.launch  t1_3.launch  t2_1.launch  t2_2.launch  t2_3.launch  t3.launch  t3_1.launch  t3_2.launch  t3_3.launch  t4.launch  t4_1.launch  t4_2.launch  t4_3.launch
euroc_simulation_server/resource/: plant.bt  waypoints_t4_1.txt  waypoints_t4_2.txt  waypoints_t4_3.txt
euroc_simulation_server/urdf/: firefly_base.urdf.xacro  firefly_t3_1.gazebo.xacro  firefly_t3_2.gazebo.xacro  firefly_t3_3.gazebo.xacro  firefly_t4_1.gazebo.xacro  firefly_t4_2.gazebo.xacro  firefly_t4_3.gazebo.xacro
mav_control/: CMakeLists.txt  package.xml
mav_control/src/: attitude_controller.cpp  attitude_controller_samy.cpp  controller_base.cpp  controller_factory.cpp  controller_plugin_base.cpp  example_controller.cpp  lee_position_controller.cpp  mc_mixer.cpp  motor_controller.cpp  px4_att_controller.cpp  px4_dummy_controller.cpp  rate_controller.cpp  ros_controller_interface.cpp
mav_description/: CMakeLists.txt  package.xml
mav_description/launch/: xacrodisplay_pelican_base.launch
mav_description/meshes/: propeller_ccw.dae  propeller_cw.dae
mav_description/urdf/: ardrone.gazebo.xacro  ardrone.urdf.xacro  ardrone.xacro  ardrone_base.xacro  component_snippets.xacro  firefly.gazebo.xacro  firefly.urdf.xacro  firefly.xacro  firefly_base.xacro  firefly_generic_odometry_sensor.gazebo  firefly_generic_pose_sensor.gazebo  firefly_two_generic_pose_sensors.gazebo  firefly_with_wind_gust.gazebo  hummingbird.xacro  hummingbird_base.xacro  iris.gazebo.xacro  iris.urdf.xacro  iris_base.xacro  multirotor_base.urdf.xacro  multirotor_base.xacro  pelican.gazebo.xacro  pelican.urdf.xacro  pelican.xacro  pelican_base.xacro  static_camera.gazebo.xacro  static_camera.urdf.xacro  test_camera_trajectory.gazebo  test_camera_trajectory.xacro  vi_sensor.gazebo  vi_sensor.xacro  vtol.gazebo.xacro  vtol.urdf.xacro
mav_gazebo/: CMakeLists.txt  package.xml
mav_gazebo/launch/: ardrone_empty_world.launch  ardrone_empty_world_with_joy.launch  ardrone_house_world.launch  ardrone_house_world_with_joy.launch  firefly_city_world.launch  firefly_empty_world.launch  firefly_empty_world_trajectory_control.launch  firefly_empty_world_with_joy.launch  firefly_hovering_example.launch  firefly_msf.launch  firefly_powerplant.launch  firefly_two_generic_pose_sensors.launch  firefly_waypoint_world.launch  firefly_waypoint_world_with_joy.launch  firefly_with_waypoints_publisher.launch  firefly_with_wind_gust.launch  hummingbird_empty_world.launch  iris_empty_world.launch  iris_empty_world_with_joy.launch  iris_house_world.launch  iris_house_world_with_joy.launch  iris_outdoor_world.launch  iris_outdoor_world_with_joy.launch  pelican_empty_world.launch  pelican_empty_world_with_joy.launch  spawn_ardrone.launch  spawn_firefly.launch  spawn_hummingbird.launch  spawn_iris.launch  spawn_pelican.launch  spawn_static_camera.launch  spawn_test_camera_trajectory.launch  spawn_vi_sensor.launch  test_camera_trajectory_empty_world.launch  vi_sensor_empty_world.launch  vtol_empty_world.launch  vtol_empty_world_with_joy.launch
mav_gazebo/src/: gazebo_pose_publisher.cpp  hovering_example.cpp  waypoint_publisher.cpp
mav_gazebo/worlds/: basic.world  outdoor.world  pelican.world  poseplugin_map.xcf  powerplant.world  test_city.world  waypoint.world
mav_gazebo_plugins/: CMakeLists.txt  package.xml
mav_gazebo_plugins/src/: gazebo_bag_plugin.cpp  gazebo_controller_interface.cpp  gazebo_imu_plugin.cpp  gazebo_motor_model.cpp  gazebo_multirotor_base_plugin.cpp  gazebo_octomap_plugin.cpp  gazebo_odometry_plugin.cpp  gazebo_pose_plugin.cpp  gazebo_trajectory_plugin.cpp  gazebo_wind_plugin.cpp  gazebo_wing_model_plugin.cpp
mav_joy_interface/: CMakeLists.txt  package.xml
mav_joy_interface/src/: joy.cpp
mav_model/: CMakeLists.txt  package.xml
rotors_comm/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_comm/msg/: PiksiBaseline.msg  PiksiRTKPos.msg  WindSpeed.msg
rotors_comm/srv/: Octomap.srv  RecordRosbag.srv  SetFrequency.srv
rotors_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_control/cfg/: multi_objective_controller.cfg
rotors_control/src/: attitude_controller.cpp  attitude_controller_samy.cpp  controller_base.cpp  controller_factory.cpp  lee_position_controller.cpp  motor_controller.cpp  px4_dummy_controller.cpp  rate_controller.cpp  ros_controller_interface.cpp
rotors_control/srv/: InitKF.srv  calibrateKF.srv
rotors_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_description/launch/: dji_zenmuse_x4s_rviz.launch  dji_zenmuse_x4s_spawn.launch  velodyne_calibration.launch  xacrodisplay_pelican_base.launch  xacrodisplay_techpod.launch  xacrodisplay_test.launch  xacrodisplay_velodyne.launch
rotors_description/meshes/: HS85MG.STL  VLP16_base.dae  bebop2.dae  (+40 more)
rotors_evaluation/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
rotors_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_gazebo_plugins/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_hil_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
rotors_joy_interface/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+1262 files in other folders)
