<?xml version="1.0"?>
<package>
  <name>mav_gazebo</name>
  <version>0.0.0</version>
  <description>The mav_gazebo package</description>

  <maintainer email="ffurrer@gmail.com">Fadri Furrer</maintainer>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>
  <maintainer email="michael.burri@mavt.ethz.ch">Michael Burri</maintainer>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/euroc_simulator/wiki</url>

  <author email="ffurrer@gmail.com">Fadri Furrer</author>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>mav_gazebo_plugins</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>mav_gazebo_plugins</run_depend>

</package>
