<?xml version="1.0"?>
<package>
  <name>mav_gazebo</name>
  <version>1.0.0</version>
  <description>The mav_gazebo package</description>

  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>

  <author>Markus Achtelik</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Pascal Gohl</author>
  <author>Sammy Omari</author>

  <license>Other</license>

  <buildtool_depend>catkin</buildtool_depend>
  
  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo_plugins</build_depend>
  <build_depend>mav_gazebo_plugins</build_depend>
  <build_depend>gazebo_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>mav_gazebo_plugins</run_depend>
  <run_depend>gazebo_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
