<?xml version="1.0"?>
<package>
  <name>mav_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The mav_gazebo_plugins package</description>

  <maintainer email="ffurrer@gmail.com">Fadri Furrer</maintainer>
  <maintainer email="markus.achtelik_devel@mavt.ethz.ch">Markus Achtelik</maintainer>
  <maintainer email="michael.burri@mavt.ethz.ch">Michael Burri</maintainer>

  <license>ASL 2.0</license>

  <url type="website">https://github.com/ethz-asl/euroc_simulator/wiki</url>

  <author email="ffurrer@gmail.com">Fadri Furrer</author>

  <buildtool_depend>catkin</buildtool_depend>>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>gazebo</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rosbag</build_depend>
  <build_depend>mav_model</build_depend>
  <build_depend>mav_control</build_depend>
  <build_depend>mav_msgs</build_depend>
  <build_depend>octomap_ros</build_depend>
  <build_depend>octomap</build_depend>
  <build_depend>octomap_msgs</build_depend>
  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rosbag</run_depend>
  <run_depend>mav_model</run_depend>
  <run_depend>mav_control</run_depend>
  <run_depend>mav_msgs</run_depend>
  <run_depend>octomap_ros</run_depend>
  <run_depend>octomap</run_depend>
  <run_depend>octomap_msgs</run_depend>

</package>
